# sculpt-macros

./: Cargo.toml  README.md  build.rs
src/: generated.rs  lib.rs
src/generate/: builder.rs  field.rs  format.rs  mod.rs  pickable.rs  root_builder.rs  root_struct_build_impl.rs  sculptable_struct.rs
src/macros/: field.rs  format.rs  mod.rs  pickable.rs  sculptable_struct.rs
tests/: default.rs  enum_to_struct_dependency.rs  many_to_one.rs  test.rs
